# face_value

./: .gitignore  README.md  compile_proto.py  compile_proto.sh  gRPC.md  info.md  logger.py  main.py  overview.md  requirements.txt  robot_to_check.md  run_system.sh  todo.md
cam_test/: Dockerfile  app.py
face_value/: logger.py  main.py  robot_control.py
face_value/grpc_image_streaming/server/: image_receiver.py
face_value/grpc_image_streaming/test_images/: test_image_sender.py
grpc_image_streaming/: requirements.txt
grpc_image_streaming/proto/: image_stream.proto  image_stream_pb2.py  image_stream_pb2_grpc.py
grpc_image_streaming/rpi_code/: image_sender.py
grpc_image_streaming/server/: image_receiver.py
grpc_image_streaming/test_images/: test_image_sender.py
ros_project/ros_3xs_docker/: Dockerfile  docker-compose.yaml
ros_project/ros_3xs_docker/ros_ws/src/: robot_control.py  robot_node.py  screen1_node.py  screen3_node.py
ros_project/ros_pi_docker/: Dockerfile
ros_project/ros_pi_docker/ros_ws/src/: cam_node.py
ros_project/ros_pi_docker/ros_ws/src/launch/: cam_launch.py
ros_projects/ros_3xs_docker/: Dockerfile  build.sh  exec.sh  run.sh
ros_projects/ros_3xs_docker/ros_3xs_ws/: .dockerignore
ros_projects/ros_3xs_docker/ros_3xs_ws/src/ros_3xs/: package.xml  setup.cfg  setup.py
ros_projects/ros_3xs_docker/ros_3xs_ws/src/ros_3xs/launch/: 3xs_im_save_launch.py
ros_projects/ros_3xs_docker/ros_3xs_ws/src/ros_3xs/ros_3xs/: im_save.py  im_save_node.py  llm_node.py  robot_node.py  screen2_node .py
ros_projects/ros_3xs_docker/ros_3xs_ws/src/ros_3xs/ros_3xs/launch/: 3xs_im_save_launch.py
ros_projects/ros_3xs_project/: launch.sh  requirements.txt
ros_projects/ros_3xs_project/ros_3xs_ws/src/ros_3xs/: setup.py
ros_projects/ros_3xs_project/ros_3xs_ws/src/ros_3xs/ros_3xs/: config.py  (+6 more)
ros_projects/ros_pi_docker/: Dockerfile  build.sh  exec.sh  run.sh
ros_projects/ros_pi_docker/docker/: devcontainter.json  docker-compose.yaml  setup_and_run.sh
ros_projects/ros_pi_docker/ros_pi_ws/src/ros_pi/: package.xml  setup.cfg  setup.py
ros_projects/ros_pi_docker/ros_pi_ws/src/ros_pi/ros_pi/: cam_node.py
ros_projects/ros_pi_docker/ros_pi_ws/src/ros_pi/ros_pi/launch/: cam_launch.py
ros_projects/ros_pi_project/: launch.sh
ros_projects/ros_pi_project/ros_pi_ws/src/ros_pi/: package.xml  setup.py
td_project/: screen2.11.toe  screen2.22.toe
(+5 files in other folders)
