<?xml version="1.0"?>
<package format="3">
  <name>ros_pi</name>
  <version>0.0.1</version>
  <description>ROS2 package for Raspberry Pi camera node</description>
  <maintainer email="emma@example.com">Emma Brass</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

</package>
